// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload List handle error 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button>
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-error"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <i
            class="anticon anticon-paper-clip"
          />
          <span
            class="ant-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        class="anticon anticon-cross"
        title="删除文件"
      />
      <div
        class="ant-upload-list-item-progress fade-leave"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-normal"
        >
          <div>
            <div
              class="ant-progress-outer"
            >
              <div
                class="ant-progress-inner"
              >
                <div
                  class="ant-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should be uploading when upload a file 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button>
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-uploading ant-upload-animate-enter"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <i
            class="anticon anticon-spin anticon-loading"
          />
          <span
            class="ant-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        class="anticon anticon-cross"
        title="删除文件"
      />
      <div
        class="ant-upload-list-item-progress"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-normal"
        >
          <div>
            <div
              class="ant-progress-outer"
            >
              <div
                class="ant-progress-inner"
              >
                <div
                  class="ant-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should be uploading when upload a file 2`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button>
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <i
            class="anticon anticon-paper-clip"
          />
          <span
            class="ant-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        class="anticon anticon-cross"
        title="删除文件"
      />
      <div
        class="ant-upload-list-item-progress fade-leave"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-normal"
        >
          <div>
            <div
              class="ant-progress-outer"
            >
              <div
                class="ant-progress-inner"
              >
                <div
                  class="ant-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;
